--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "leaflet": "^1.9.4",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
+    "react-animated-polyline-cursor": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
