--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
