--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
@@ -19,6 +21,7 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-animated-polyline-cursor": "^1.0.3",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
@@ -28,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.11"
   },
@@ -35,6 +39,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^18.2.22",
     "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
